--- a/src/style.css
+++ b/src/style.css
@@ -9,14 +9,55 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  font-family: "Karla", sans-serif;
 }
 
 .container {
-  width: 720px;
-  height: 480px;
+  width: 640px;
+  height: 400px;
   background: #f5f5f5;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 8px;
+}
+
+.title {
+  margin-top: -20px;
+  margin-bottom: 5px;
+  color: #2b283a;
+  font-size: 26px;
+}
+
+.instructions {
+  font-family: "Inter";
+  width: 260px;
+  margin-top: 0;
+  margin-bottom: 30px;
+  text-align: center;
+  font-size: 13px;
+  line-height: 16px;
+  color: #4a4e74;
+}
+
+button {
+  margin-top: 30px;
+  width: 92px;
+  height: 36px;
+  background: #008e89;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  font-weight: 700;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: none;
+}
+
+button:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
