--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,7 @@ body {
   justify-content: center;
   align-items: center;
   border-radius: 8px;
+  position: relative;
 }
 
 .title {
@@ -45,6 +46,7 @@ body {
   grid-template: auto auto / repeat(5, 1fr);
   text-align: center;
   gap: 20px;
+  margin-top: 72px;
 }
 
 button {
