--- a/src/components/Die.module.css
+++ b/src/components/Die.module.css
@@ -1,9 +1,50 @@
 .dieFace {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  display: grid;
+  column-gap: 8px;
+  grid-template-areas:
+    "a . c"
+    "e g f"
+    "d . b";
+}
+
+.dieDot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: black;
+}
+
+.dieDot:nth-child(1) {
+  grid-area: a;
+}
+
+.dieDot:nth-child(2) {
+  grid-area: b;
+}
+
+.dieDot:nth-child(3) {
+  grid-area: c;
+}
+
+.dieDot:nth-child(4) {
+  grid-area: d;
+}
+
+.dieDot:nth-child(5) {
+  grid-area: e;
+}
+
+.dieDot:nth-child(6) {
+  grid-area: f;
+}
+
+.dieDot:nth-child(odd):last-child {
+  grid-area: g;
 }
